@ feat: 为缺失 company_id 的表补充多租户字段，完善数据隔离
为 camera、report、inspection_plan、inspection_log、ai_conversation、sys_log 6 张表添加 company_id 字段及索引，
同步更新 Entity、Service、Controller 层代码，确保创建时自动填充、查询时按企业过滤。
修复 DetectionToolTest/EnvironmentToolTest 中 mock 对象错误（mock Mapper 应为 Service）及断言与实际返回格式不匹配的问题。
@