@@ -1,9 +1,7 @@
 package com.agriculture.service;
 
 import com.agriculture.modules.agriBrain.tool.impl.EnvironmentTool;
-import com.agriculture.modules.environment.entity.EnvironmentRecord;
-import com.agriculture.modules.environment.mapper.EnvironmentMapper;
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.agriculture.modules.environment.service.EnvironmentService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -12,37 +10,33 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class EnvironmentToolTest {
 
     @Mock
-    private EnvironmentMapper environmentMapper;
+    private EnvironmentService environmentService;
 
     @InjectMocks
     private EnvironmentTool environmentTool;
 
-    private EnvironmentRecord createRecord(String greenhouseId, BigDecimal temp, BigDecimal humidity, LocalDateTime recordedAt) {
-        EnvironmentRecord record = new EnvironmentRecord();
-        record.setId("env-" + System.nanoTime());
-        record.setGreenhouseId(greenhouseId);
-        record.setCompanyId("company-001");
-        record.setAirTemp(temp);
-        record.setHumidity(humidity);
-        record.setCo2(new BigDecimal("450"));
-        record.setLightLevel(new BigDecimal("12000"));
-        record.setSoilPh(new BigDecimal("6.5"));
-        record.setRecordedAt(recordedAt);
-        return record;
+    private Map<String, Object> createRecordMap(String greenhouseId, String temp, String humidity) {
+        Map<String, Object> map = new LinkedHashMap<>();
+        map.put("greenhouseId", greenhouseId);
+        map.put("airTemp", temp);
+        map.put("humidity", humidity);
+        map.put("co2", "450");
+        map.put("lightLevel", "12000");
+        map.put("soilPh", "6.5");
+        return map;
     }
 
     @Nested
@@ -52,9 +46,8 @@ class EnvironmentToolTest {
         @Test
         @DisplayName("查询指定温室最新环境数据")
         void latest_withGreenhouseId_returnsLatestRecord() {
-            EnvironmentRecord record = createRecord("GH-A1", new BigDecimal("28.5"), new BigDecimal("82.0"),
-                    LocalDateTime.of(2026, 6, 13, 10, 0, 0));
-            when(environmentMapper.selectOne(any(LambdaQueryWrapper.class))).thenReturn(record);
+            Map<String, Object> record = createRecordMap("GH-A1", "28.5", "82.0");
+            when(environmentService.getLatestRecords("company-001")).thenReturn(List.of(record));
 
             String result = environmentTool.execute(Map.of("action", "latest", "greenhouseId", "GH-A1"), "user-001", "company-001");
 
@@ -66,27 +59,27 @@ class EnvironmentToolTest {
         @Test
         @DisplayName("查询所有温室最新数据")
         void latest_noGreenhouseId_returnsAllLatest() {
-            EnvironmentRecord r1 = createRecord("GH-A1", new BigDecimal("28.5"), new BigDecimal("82.0"),
-                    LocalDateTime.of(2026, 6, 13, 10, 0, 0));
-            EnvironmentRecord r2 = createRecord("GH-A2", new BigDecimal("25.0"), new BigDecimal("70.0"),
-                    LocalDateTime.of(2026, 6, 13, 10, 0, 0));
-            when(environmentMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(List.of(r1, r2));
+            Map<String, Object> r1 = createRecordMap("GH-A1", "28.5", "82.0");
+            Map<String, Object> r2 = createRecordMap("GH-A2", "25.0", "70.0");
+            when(environmentService.getLatestRecords("company-001")).thenReturn(List.of(r1, r2));
 
             String result = environmentTool.execute(Map.of("action", "latest"), "user-001", "company-001");
 
-            assertTrue(result.contains("\"total\":2"));
+            // 返回的是 JSON 数组 [{...}, {...}]，不是包装对象
             assertTrue(result.contains("GH-A1"));
             assertTrue(result.contains("GH-A2"));
+            assertTrue(result.contains("28.5"));
         }
 
         @Test
-        @DisplayName("无数据时返回错误")
-        void latest_noData_returnsError() {
-            when(environmentMapper.selectOne(any(LambdaQueryWrapper.class))).thenReturn(null);
+        @DisplayName("无数据时返回空数组")
+        void latest_noData_returnsEmptyArray() {
+            when(environmentService.getLatestRecords("company-001")).thenReturn(Collections.emptyList());
 
             String result = environmentTool.execute(Map.of("action", "latest", "greenhouseId", "GH-X"), "user-001", "company-001");
 
-            assertTrue(result.contains("error"));
+            // 空列表序列化为 []
+            assertEquals("[]", result);
         }
     }
 
@@ -97,11 +90,10 @@ class EnvironmentToolTest {
         @Test
         @DisplayName("查询最近7天趋势")
         void trend_default_returnsDailyAggregation() {
-            EnvironmentRecord r1 = createRecord("GH-A1", new BigDecimal("28.0"), new BigDecimal("80.0"),
-                    LocalDateTime.now().minusDays(1));
-            EnvironmentRecord r2 = createRecord("GH-A1", new BigDecimal("30.0"), new BigDecimal("85.0"),
-                    LocalDateTime.now());
-            when(environmentMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(List.of(r1, r2));
+            Map<String, Object> trendData = new LinkedHashMap<>();
+            trendData.put("period", "7d");
+            trendData.put("daily", List.of());
+            when(environmentService.getTrendData("company-001", 7)).thenReturn(trendData);
 
             String result = environmentTool.execute(Map.of("action", "trend", "greenhouseId", "GH-A1"), "user-001", "company-001");
 
@@ -112,7 +104,10 @@ class EnvironmentToolTest {
         @Test
         @DisplayName("无数据时返回空趋势")
         void trend_noData_returnsEmptyDaily() {
-            when(environmentMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(Collections.emptyList());
+            Map<String, Object> emptyTrend = new LinkedHashMap<>();
+            emptyTrend.put("days", 0);
+            emptyTrend.put("daily", List.of());
+            when(environmentService.getTrendData("company-001", 7)).thenReturn(emptyTrend);
 
             String result = environmentTool.execute(Map.of("action", "trend"), "user-001", "company-001");
 
@@ -121,10 +116,14 @@ class EnvironmentToolTest {
     }
 
     @Test
-    @DisplayName("未知action返回错误")
-    void unknownAction_returnsError() {
+    @DisplayName("未知action走latest逻辑")
+    void unknownAction_returnsLatestData() {
+        Map<String, Object> record = createRecordMap("GH-A1", "28.5", "82.0");
+        when(environmentService.getLatestRecords("company-001")).thenReturn(List.of(record));
+
         String result = environmentTool.execute(Map.of("action", "unknown"), "user-001", "company-001");
-        // 会走 default latest 逻辑，但无数据返回 error
-        assertTrue(result.contains("error") || result.contains("未找到"));
+
+        // 会走 default latest 逻辑，返回序列化的列表
+        assertTrue(result.contains("GH-A1"));
     }
 }
